--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@
 			<version>1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi-ooxml</artifactId>
-			<version>3.15</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
